update template for CentOS 5.6

--- a/definitions/CentOS-5.6-x86_64/ks.cfg
+++ b/definitions/CentOS-5.6-x86_64/ks.cfg
@@ -39,7 +39,9 @@ e2fsprogs
 lvm2
 
 %post
+yum -y install kernel
 /usr/sbin/groupadd vagrant
 /usr/sbin/useradd vagrant -g vagrant -G wheel
 echo "vagrant"|passwd --stdin vagrant
 echo "vagrant        ALL=(ALL)       NOPASSWD: ALL" >> /etc/sudoers
+
