--- a/templates/CentOS-5.6-x86_64/ks.cfg
+++ b/templates/CentOS-5.6-x86_64/ks.cfg
@@ -39,6 +39,7 @@ e2fsprogs
 lvm2
 
 %post
+yum -y install kernel
 /usr/sbin/groupadd vagrant
 /usr/sbin/useradd vagrant -g vagrant -G wheel
 echo "vagrant"|passwd --stdin vagrant
